--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,17 +3,20 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "serve -s ./dist/frontend",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~0.900.7",
     "@angular/animations": "~9.0.7",
+    "@angular/cli": "~9.0.7",
     "@angular/common": "~9.0.7",
     "@angular/compiler": "~9.0.7",
+    "@angular/compiler-cli": "~9.0.7",
     "@angular/core": "~9.0.7",
     "@angular/forms": "~9.0.7",
     "@angular/platform-browser": "~9.0.7",
@@ -21,13 +24,11 @@
     "@angular/router": "~9.0.7",
     "ng-zorro-antd": "^8.5.2",
     "rxjs": "~6.5.4",
+    "serve": "^11.3.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.7",
-    "@angular/cli": "~9.0.7",
-    "@angular/compiler-cli": "~9.0.7",
     "@angular/language-service": "~9.0.7",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
